fixed text alignment

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 * {
     background-color: #202020;
-    color: white;
+    color: white; 
+}
+
+.center {
     text-align: center;
 }
 
